--- a/src/html/_advantage.html
+++ b/src/html/_advantage.html
@@ -2,11 +2,11 @@
 
   <div class="container">
 
-    <h2 class="title">Наші переваги</h2>
+    <h2 class="title" data-aos="fade-up" data-aos-delay="300">Наші переваги</h2>
 
     <ol class="advantage__list">
 
-      <li class="advantage__item">
+      <li class="advantage__item" data-aos="fade-right" data-aos-delay="400">
 
         <div class="advantage__descr">
 
@@ -24,7 +24,7 @@
 
       </li>
 
-      <li class="advantage__item">
+    <li class="advantage__item" data-aos="fade-left" data-aos-delay="400">
 
         <div class="advantage__descr">
 
@@ -42,7 +42,7 @@
 
       </li>
 
-      <li class="advantage__item">
+      <li class="advantage__item" data-aos="fade-right" data-aos-delay="400">
 
         <div class="advantage__descr">
 
@@ -60,7 +60,7 @@
 
       </li>
 
-      <li class="advantage__item">
+      <li class="advantage__item" data-aos="fade-left" data-aos-delay="400">
 
         <div class="advantage__descr">
 
@@ -78,7 +78,7 @@
 
       </li>
 
-      <li class="advantage__item">
+      <li class="advantage__item" data-aos="fade-right" data-aos-delay="400">
 
         <div class="advantage__descr">
 
@@ -94,7 +94,7 @@
 
         </div>
 
-      </li>
+      </li> 
 
     </ol>
 
