--- a/src/html/_footer.html
+++ b/src/html/_footer.html
@@ -4,7 +4,7 @@
 
     <div class="footer__top">
 
-      <div class="footer__left">
+      <div class="footer__left" data-aos="fade-up" data-aos-delay="300">
 
         <a class="logo" href="#">
           <img src="img/logo.svg" width="120" height="50" alt="логотип сайту Ringo">
@@ -50,7 +50,7 @@
 
       </div>
 
-      <ul class="footer-nav__list">
+      <ul class="footer-nav__list" data-aos="fade-up" data-aos-delay="350">
 
         <li class="footer-nav__item">
 
@@ -66,13 +66,13 @@
 
         <li class="footer-nav__item">
 
-          <a class="footer-nav__link" href="#">Переваги</a>
+          <a class="footer-nav__link" href="#advantage">Переваги</a>
 
         </li>
 
         <li class="footer-nav__item">
 
-          <a class="footer-nav__link" href="#">Етапи роботи</a>
+          <a class="footer-nav__link" href="#stage">Етапи роботи</a>
 
         </li>
 
@@ -84,13 +84,13 @@
 
         <li class="footer-nav__item">
 
-          <a class="footer-nav__link" href="#">Стати партнером</a>
+          <a class="footer-nav__link" data-graph-path="modal-partners">Стати партнером</a>
 
         </li>
 
       </ul>
 
-      <div class="footer-contact">
+      <div class="footer-contact" data-aos="fade-up" data-aos-delay="400">
 
         <a class="footer-contact__link" href="tel:+380676615415">
 
@@ -110,11 +110,11 @@
 
     <div class="footer__middle">
 
-      <span class="brand__title">Бренди комплектуючих</span>
+      <span class="brand__title" data-aos="fade-up" data-aos-delay="300">Бренди комплектуючих</span>
 
       <ul class="brand__list">
 
-        <li class="brand__item">
+        <li class="brand__item" data-aos="flip-up" data-aos-delay="200">
 
           <a class="brand__link" href="#">
 
@@ -124,7 +124,7 @@
 
         </li>
 
-        <li class="brand__item">
+        <li class="brand__item" data-aos="flip-up" data-aos-delay="250">
 
           <a class="brand__link" href="#">
 
@@ -134,7 +134,7 @@
 
         </li>
 
-        <li class="brand__item">
+        <li class="brand__item" data-aos="flip-up" data-aos-delay="300">
 
           <a class="brand__link" href="#">
 
@@ -144,7 +144,7 @@
 
         </li>
 
-        <li class="brand__item">
+        <li class="brand__item" data-aos="flip-up" data-aos-delay="350">
 
           <a class="brand__link" href="#">
 
@@ -154,7 +154,7 @@
 
         </li>
 
-        <li class="brand__item">
+        <li class="brand__item" data-aos="flip-up" data-aos-delay="400">
 
           <a class="brand__link" href="#">
 
@@ -164,7 +164,7 @@
 
         </li>
 
-        <li class="brand__item">
+        <li class="brand__item" data-aos="flip-up" data-aos-delay="450">
 
           <a class="brand__link" href="#">
 
@@ -174,7 +174,7 @@
 
         </li>
 
-        <li class="brand__item">
+        <li class="brand__item" data-aos="flip-up" data-aos-delay="500">
 
           <a class="brand__link" href="#">
 
@@ -184,7 +184,7 @@
 
         </li>
 
-        <li class="brand__item">
+        <li class="brand__item" data-aos="flip-up" data-aos-delay="550">
 
           <a class="brand__link" href="#">
 
@@ -195,7 +195,7 @@
 
         </li>
 
-        <li class="brand__item">
+        <li class="brand__item" data-aos="flip-up" data-aos-delay="600">
 
           <a class="brand__link" href="#">
 
@@ -211,7 +211,7 @@
 
     <div class="footer__bottom">
 
-      <span class="footer__copyright">© 2021 Ringo</span>
+      <span class="footer__copyright">© 2022 Ringo</span>
 
       <span class="footer__creator">Дизайн сайту</span>
 
@@ -221,4 +221,4 @@
 
 </footer>
 
-<!-- @include('_modal.html') -->
+@include('_modal.html')
