--- a/src/html/_portfolio.html
+++ b/src/html/_portfolio.html
@@ -1,12 +1,12 @@
 <section class="portfolio" id="portfolio">
 
-  <h2 class="title">Зараз в роботі</h2>
+  <h2 class="title" data-aos="fade-up" data-aos-delay="300">Зараз в роботі</h2>
 
-  <div class="portfolio__slider">
+  <div class="portfolio__slider" data-aos="fade-up" data-aos-delay="400">
 
     @include("_slider-nav.html")
 
-    <ul class="portfolio__list swiper-wrapper">
+    <ul class="portfolio__list swiper-wrapper" >
 
       <li class="portfolio__item swiper-slide">
 
