--- a/src/html/_projects.html
+++ b/src/html/_projects.html
@@ -2,17 +2,17 @@
 
   <div class="projects__inner">
 
-    <div class="projects__content">
+    <div class="projects__content" data-aos="fade-up" data-aos-delay="300">
 
       <h2 class="title projects__title">Обговоримо ваш проект?</h2>
 
       <p>Заповніть форму і найближчим часом ми зв'яжемося з вами!</p>
 
       @include('_form.html')
-      
+
     </div>
 
-    <div class="projects__box">
+    <div class="projects__box" data-aos="fade-left" data-aos-delay="450">
 
       <picture>
         <source srcset="img/projects-bg.avif" type="image/avif">
