--- a/src/html/_provide.html
+++ b/src/html/_provide.html
@@ -2,42 +2,42 @@
 
   <div class="container">
 
-    <h2 class="title">Ми забезпечемо вас</h2>
+    <h2 class="title" data-aos="fade-up" data-aos-delay="300">Ми забезпечимо вас</h2>
 
     <ul class="provide__list">
 
-      <li class="provide__item provide__item--furniture">
+      <li class="provide__item provide__item--furniture" data-aos="fade-right" data-aos-delay="400">
 
         <p>Меблями</p>
 
       </li>
 
-      <li class="provide__item provide__item--lighting ">
+      <li class="provide__item provide__item--lighting" data-aos="fade-left" data-aos-delay="400">
 
         <p>Освітленням</p>
 
       </li>
 
-      <li class="provide__item provide__item--machinery">
+      <li class="provide__item provide__item--machinery" data-aos="fade-right" data-aos-delay="400">
 
         <p>Побутовою технікою</p>
 
       </li>
 
-      <li class="provide__item provide__item--doors">
+      <li class="provide__item provide__item--doors" data-aos="fade-left" data-aos-delay="400">
 
         <p>Дверима</p>
 
       </li>
 
-      <li class="provide__item provide__item--floor">
+      <li class="provide__item provide__item--floor" data-aos="fade-right" data-aos-delay="400">
 
         <p>Стіновими панелями та
           підлоговим покриттям</p>
 
       </li>
 
-      <li class="provide__item provide__item--projects">
+      <li class="provide__item provide__item--projects" data-aos="fade-left" data-aos-delay="400">
 
         <p>Проектуванням</p>
 
