--- a/src/html/hero-slider/_banner-last.html
+++ b/src/html/hero-slider/_banner-last.html
@@ -9,8 +9,8 @@
         Вас якісним меблевим продуктом власного виробництва.
       </p>
 
-      <button class="btn">Обговорити проект</button>
+      <button class="btn" type="button">Обговорити проект</button>
 
     </div>
- 
+
 </li>
