--- a/src/html/_about.html
+++ b/src/html/_about.html
@@ -2,11 +2,12 @@
 
   <div class="container">
 
-    <p class="about__title">Проект Рінго Україна - створений виконувати об`єктні задачі комплексного меблювання житлових
+    <p class="about__title" data-aos="fade-up" data-aos-delay="300">Проект Рінго Україна - створений виконувати об`єктні
+      задачі комплексного меблювання житлових
       та комерційних
       приміщень.</p>
 
-    <ul class="about__list">
+    <ul class="about__list" data-aos="fade-up" data-aos-delay="400">
 
       <li class="about__item">
 
@@ -20,20 +21,20 @@
         <p>Рінго найкращий підрядник прораба, дизайнера, проект-менеджера або персональний помічник власника бізнесу,
           квартири чи салону
         </p>
-        
+
       </li>
 
     </ul>
 
-    <div class="about__box about__box--first">
+    <div class="about__box about__box--first" data-aos="fade-up" data-aos-delay="350">
 
-      <img loading="lazy" src="img/about/bedroom.png" width="160" height="200" alt="зображення кухні">
+      <img loading="lazy" src="img/about/bedroom.png" width="160" height="200" alt="Зображення оформлення спальні">
 
     </div>
 
-    <div class="about__box about__box--second">
+    <div class="about__box about__box--second" data-aos="fade-up" data-aos-delay="350">
 
-      <img loading="lazy" src="img/about/kitchen.png" width="160" height="200" alt="зображення кухні">
+      <img loading="lazy" src="img/about/kitchen.png" width="160" height="200" alt="Зображення оформлення кухні">
 
     </div>
 
