--- a/src/html/_question.html
+++ b/src/html/_question.html
@@ -2,17 +2,17 @@
 
   <div class="question__inner">
 
-    <div class="question__content">
+    <div class="question__content" data-aos="fade-up" data-aos-delay="300">
 
       <h2 class="title question__title">Залишилися питання?</h2>
 
       <p>Отримай безкоштовну консультацію менеджера та прорахунок проекту</p>
 
-      @include('_form.html')
+       @include('_form.html')
 
     </div>
 
-    <div class="question__box">
+    <div class="question__box" data-aos="fade-left" data-aos-delay="450">
       <picture>
         <source srcset="img/question-bg.avif" type="image/avif">
         <source srcset="img/question-bg.webp" type="image/webp">
