--- a/src/html/_way.html
+++ b/src/html/_way.html
@@ -1,12 +1,12 @@
-<section class="way" id="way">
+<section class="way">
 
   <div class="container">
 
-    <h2 class="title" id="title"> основні напрямки</h2>
+    <h2 class="title" data-aos="fade-up" data-aos-delay="200" id="title"> основні напрямки</h2>
 
     <ol class="way__list">
 
-      <li class="way__item">
+      <li class="way__item" data-aos="fade-up" data-aos-delay="250">
 
         <h3 class="way__title">Дизайн інтерєру</h3>
 
@@ -27,7 +27,7 @@
 
       </li>
 
-      <li class="way__item">
+      <li class="way__item" data-aos="fade-up" data-aos-delay="300">
 
         <h3 class="way__title">Виробництво меблів</h3>
 
@@ -48,7 +48,7 @@
 
       </li>
 
-      <li class="way__item">
+      <li class="way__item" data-aos="fade-up" data-aos-delay="350">
 
         <h3 class="way__title">Комплексне меблювання</h3>
 
