--- a/src/html/_about.html
+++ b/src/html/_about.html
@@ -2,12 +2,12 @@
 
   <div class="container">
 
-    <p class="about__title" data-aos="fade-up" data-aos-delay="300">Проект Рінго Україна - створений виконувати об`єктні
+    <p class="about__title">Проект Рінго Україна - створений виконувати об`єктні
       задачі комплексного меблювання житлових
       та комерційних
       приміщень.</p>
 
-    <ul class="about__list" data-aos="fade-up" data-aos-delay="400">
+    <ul class="about__list">
 
       <li class="about__item">
 
@@ -26,13 +26,13 @@
 
     </ul>
 
-    <div class="about__box about__box--first" data-aos="fade-up" data-aos-delay="350">
+    <div class="about__box about__box--first">
 
       <img loading="lazy" src="img/about/bedroom.png" width="160" height="200" alt="Зображення оформлення спальні">
 
     </div>
 
-    <div class="about__box about__box--second" data-aos="fade-up" data-aos-delay="350">
+    <div class="about__box about__box--second">
 
       <img loading="lazy" src="img/about/kitchen.png" width="160" height="200" alt="Зображення оформлення кухні">
 
