--- a/src/html/_footer.html
+++ b/src/html/_footer.html
@@ -4,7 +4,7 @@
 
     <div class="footer__top">
 
-      <div class="footer__left" data-aos="fade-up" data-aos-delay="300">
+      <div class="footer__left">
 
         <a class="logo" href="#">
           <img src="img/logo.svg" width="120" height="50" alt="логотип сайту Ringo">
@@ -50,7 +50,7 @@
 
       </div>
 
-      <ul class="footer-nav__list" data-aos="fade-up" data-aos-delay="350">
+      <ul class="footer-nav__list">
 
         <li class="footer-nav__item">
 
@@ -90,7 +90,7 @@
 
       </ul>
 
-      <div class="footer-contact" data-aos="fade-up" data-aos-delay="400">
+      <div class="footer-contact">
 
         <a class="footer-contact__link" href="tel:+380676615415">
 
@@ -110,11 +110,11 @@
 
     <div class="footer__middle">
 
-      <span class="brand__title" data-aos="fade-up" data-aos-delay="300">Бренди комплектуючих</span>
+      <span class="brand__title">Бренди комплектуючих</span>
 
       <ul class="brand__list">
 
-        <li class="brand__item" data-aos="flip-up" data-aos-delay="200">
+        <li class="brand__item">
 
           <a class="brand__link" href="#">
 
@@ -124,7 +124,7 @@
 
         </li>
 
-        <li class="brand__item" data-aos="flip-up" data-aos-delay="250">
+        <li class="brand__item">
 
           <a class="brand__link" href="#">
 
@@ -134,7 +134,7 @@
 
         </li>
 
-        <li class="brand__item" data-aos="flip-up" data-aos-delay="300">
+        <li class="brand__item">
 
           <a class="brand__link" href="#">
 
@@ -144,7 +144,7 @@
 
         </li>
 
-        <li class="brand__item" data-aos="flip-up" data-aos-delay="350">
+        <li class="brand__item">
 
           <a class="brand__link" href="#">
 
@@ -154,7 +154,7 @@
 
         </li>
 
-        <li class="brand__item" data-aos="flip-up" data-aos-delay="400">
+        <li class="brand__item">
 
           <a class="brand__link" href="#">
 
@@ -164,7 +164,7 @@
 
         </li>
 
-        <li class="brand__item" data-aos="flip-up" data-aos-delay="450">
+        <li class="brand__item">
 
           <a class="brand__link" href="#">
 
@@ -174,7 +174,7 @@
 
         </li>
 
-        <li class="brand__item" data-aos="flip-up" data-aos-delay="500">
+        <li class="brand__item">
 
           <a class="brand__link" href="#">
 
@@ -184,7 +184,7 @@
 
         </li>
 
-        <li class="brand__item" data-aos="flip-up" data-aos-delay="550">
+        <li class="brand__item">
 
           <a class="brand__link" href="#">
 
@@ -195,7 +195,7 @@
 
         </li>
 
-        <li class="brand__item" data-aos="flip-up" data-aos-delay="600">
+        <li class="brand__item">
 
           <a class="brand__link" href="#">
 
