--- a/src/html/_gifts.html
+++ b/src/html/_gifts.html
@@ -2,7 +2,7 @@
 
   <div class="gifts__inner">
 
-    <div class="gifts__box gifts__box--first" data-aos="fade-up" data-aos-duration="300">
+    <div class="gifts__box gifts__box--first">
 
       <img loading="lazy" src="img/toaster.png" width="150" height="130" alt="зображення подарункового тостера">
 
@@ -12,18 +12,18 @@
 
     <div class="gifts__content">
 
-      <h2 class="title" data-aos="fade-up" data-aos-delay="250">Рінго роздає подарунки!</h2>
+      <h2 class="title">Рінго роздає подарунки!</h2>
 
-      <p class="gifts__descr" data-aos="fade-up" data-aos-delay="350">
+      <p class="gifts__descr">
         При замовленні до нового року, отримай цінний подарунок для свого комфорту
       </p>
 
-      <button class="btn" data-aos="fade-up" data-aos-delay="350" type="button" data-graph-path="modal-form">Хочу
+      <button class="btn" type="button" data-graph-path="modal-form">Хочу
         подарунок</button>
 
     </div>
 
-    <div class="gifts__box gifts__box--second" data-aos="fade-up" data-aos-duration="350">
+    <div class="gifts__box gifts__box--second">
 
       <img loading="lazy" src="img/microwave.png" width="150" height="130"
         alt="зображення подарункової мікрохвильової печі">
