--- a/src/html/_header.html
+++ b/src/html/_header.html
@@ -48,7 +48,7 @@
 
         <li class="social__item">
 
-          <a href="#" class="social__link">
+          <a href="#" class="social__link" target="_blank">
 
             <svg class="icon">
               <use xlink:href="img/sprite.svg#instagram"></use>
@@ -62,7 +62,7 @@
 
         <li class="social__item">
 
-          <a href="#" class="social__link">
+          <a href="#" class="social__link" target="_blank">
 
             <svg class="icon icon--facebook">
               <use xlink:href="img/sprite.svg#facebook"></use>
