--- a/src/html/_partners.html
+++ b/src/html/_partners.html
@@ -2,9 +2,9 @@
 
   <div class="container">
 
-    <h2 class="title" data-aos="fade-up" data-aos-delay="300">Наші партнери</h2>
+    <h2 class="title">Наші партнери</h2>
 
-    <div class="partners__slider" data-aos="fade-up" data-aos-delay="400">
+    <div class="partners__slider">
 
       <ul class="partners__list swiper-wrapper">
 
