--- a/src/html/_projects.html
+++ b/src/html/_projects.html
@@ -2,7 +2,7 @@
 
   <div class="projects__inner">
 
-    <div class="projects__content" data-aos="fade-up" data-aos-delay="300">
+    <div class="projects__content">
 
       <h2 class="title projects__title">Обговоримо ваш проект?</h2>
 
@@ -12,7 +12,7 @@
 
     </div>
 
-    <div class="projects__box" data-aos="fade-left" data-aos-delay="450">
+    <div class="projects__box">
 
       <picture>
         <source srcset="img/projects-bg.avif" type="image/avif">
