--- a/src/html/_stage.html
+++ b/src/html/_stage.html
@@ -2,11 +2,11 @@
 
   <div class="container">
 
-    <h2 class="title" data-aos="fade-up" data-aos-delay="300">Етапи роботи</h2>
+    <h2 class="title">Етапи роботи</h2>
 
     <ol class="stage__list">
 
-      <li class="stage__item" data-aos="fade-right" data-aos-delay="400">
+      <li class="stage__item">
 
         <h3 class="stage__title">Підписання договору</h3>
 
@@ -16,7 +16,7 @@
 
       </li>
 
-      <li class="stage__item" data-aos="fade-left" data-aos-delay="400">
+      <li class="stage__item">
 
         <h3 class="stage__title">Виготовлення</h3>
 
@@ -26,7 +26,7 @@
 
       </li>
 
-      <li class="stage__item" data-aos="fade-right" data-aos-delay="400">
+      <li class="stage__item">
 
         <h3 class="stage__title">Встановлення</h3>
 
@@ -36,7 +36,7 @@
 
       </li>
 
-      <li class="stage__item" data-aos="fade-left" data-aos-delay="400">
+      <li class="stage__item">
 
         <h3 class="stage__title">Новосілля</h3>
 
