--- a/src/html/_way.html
+++ b/src/html/_way.html
@@ -2,11 +2,11 @@
 
   <div class="container">
 
-    <h2 class="title" data-aos="fade-up" data-aos-delay="200" id="title"> основні напрямки</h2>
+    <h2 class="title" id="title"> основні напрямки</h2>
 
-    <ol class="way__list">
+    <ul class="way__list">
 
-      <li class="way__item" data-aos="fade-up" data-aos-delay="250">
+      <li class="way__item">
 
         <h3 class="way__title">Дизайн інтерєру</h3>
 
@@ -27,7 +27,7 @@
 
       </li>
 
-      <li class="way__item" data-aos="fade-up" data-aos-delay="300">
+      <li class="way__item">
 
         <h3 class="way__title">Виробництво меблів</h3>
 
@@ -48,7 +48,7 @@
 
       </li>
 
-      <li class="way__item" data-aos="fade-up" data-aos-delay="350">
+      <li class="way__item">
 
         <h3 class="way__title">Комплексне меблювання</h3>
 
@@ -68,7 +68,7 @@
 
       </li>
 
-    </ol>
+    </ul>
 
   </div>
 
