--- a/src/html/hero-slider/_banner-first.html
+++ b/src/html/hero-slider/_banner-first.html
@@ -11,7 +11,7 @@
         задач.
       </p>
 
-      <button class="btn" type="button" data-graph-path="modal-finish">Обговорити проект</button>
+      <button class="btn" type="button">Обговорити проект</button>
 
     </div>
 
