--- a/src/html/_portfolio.html
+++ b/src/html/_portfolio.html
@@ -1,8 +1,8 @@
 <section class="portfolio" id="portfolio">
 
-  <h2 class="title" data-aos="fade-up" data-aos-delay="300">Зараз в роботі</h2>
+  <h2 class="title">Зараз в роботі</h2>
 
-  <div class="portfolio__slider" data-aos="fade-up" data-aos-delay="400">
+  <div class="portfolio__slider">
 
     @include("_slider-nav.html")
 
